--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,3 +22,4 @@ jobs:
         # Runs plans matching ANY of the following labels AND the environment/application IDs above
           plan-labels: |
             smoke-test
+            smoke-test-02
